styles.css
:root {
  --dark-bg-color:                                   #1F2937;
  --hero-main-text-color:                            #F9FAF8;
  --hero-subtext-color:                              #E5E7EB;
  --call-to-action-bg-color:                         #3882F6;
  --header-logo-text-color:        var(--hero-main-text-color);
  --information-header-text-color:        var(--dark-bg-color);
  --quote-bg-color:                  var(--hero-subtext-color);
  --quote-text-color:                     var(--dark-bg-color);
}

html {
    box-sizing: border-box;
  }
  *, *:before, *:after {
    font-family: 'Roboto', 'Arial', 'Helvetica', 'Calibri', 'Droid Sans', 'Liberation Sans', sans-serif;
    box-sizing: inherit;
  }

  body {
    display: flex;
    flex-direction: column;
    margin: 0px;
    background-color: var(--dark-bg-color);
  }

  header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex: 1;
    margin: 10px 180px;
  }
  .header-logo {
    color: var(--header-logo-text-color);
    font-size: 24px;
    font-weight: 900;
  }
  
  .header-links-list {
    color: var(--hero-subtext-color);
    font-size: 18px;
  }

  ul {
    display: flex;
    list-style-type: none;
    padding: 0;
  }

  li {
    margin: 0 16px;
  }

  .hero-section {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 100px 180px;
    flex-wrap: wrap;
  }

  .hero-section .content-section{
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    width: 400px;
  }

  .hero-heading {
    color: var(--hero-main-text-color);
    font-size: 48px;
    font-weight: 900;
    margin: 0px;
  }
  .hero-button {
    background-color: var(--call-to-action-bg-color);
    color: var(--hero-main-text-color);
    font-size: 16px;
    font-weight: 700;
    padding: 8px 32px;
    border: 0;
    border-radius: 8px;
    margin: 16px 0px;
    align-self: flex-start;
  }

  .hero-subtext {
    color: var(--hero-subtext-color);
    font-size: 18px;
  }

  .hero-image {
    display: flex;
    flex-direction: column;
    background-color: #6C747C;
    color: var(--hero-subtext-color);
    font-size: 18px;
    height: 250px;
    width: 500px;
    justify-content: center;
    align-items: center;
  }

  .information-section {
    background-color: white;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-items: center;
    align-items: center;

  }

  .information-heading {
    color: var(--information-header-text-color);
    font-weight: 900;
    font-size: 35px;
  }

  .information-images {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 24px;
    margin-bottom: 100px;
  }

  .information-image {
    display: flex;
    flex-direction: column;
    width: 100px;
  }

  .image-placeholder {
    border: var(--call-to-action-bg-color) 4px solid;
    border-radius: 16px;
    height: 150px;
    width: 150px;
    margin-bottom: 8px;
  }

  .information-image-caption {
    display: flex;
    font-size: 16px;
    color: #495562;
    text-align: center;
    width: 150px;
  }


  .testimonial-section {
    display: flex;
    flex-direction: column;
    background-color: var(--quote-bg-color);
    color: var(--dark-bg-color);
    font-size: 36px;
    font-weight: 300;
    font-style: italic;
  }
.testimonial {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 700px;
    margin: 100px 0px;
  }

  .testimonial-author {
    font-size: 24px;
    font-weight: 700;
    align-self: flex-end;
    margin-right: 50px;
  }

